--- a/config.json
+++ b/config.json
@@ -1,11 +1,16 @@
 {
 	"settings": {
-		"gdrive": true,
-		"gdriveClientId": "43695086057-08hqlmvp2tmreat7rt83jbp22i17von9.apps.googleusercontent.com",
-		"colorfulIcons": true,
-		"canOpenDemo": false,
+    "colorfulIcons": true,
+    "hideEmptyFields": true,
+
+		"canCreate": false,
+    "canOpenDemo": false,
 		"canOpenSettings": false,
 		"canImportXml": false,
+
+		"gdrive": true,
+		"gdriveClientId": "43695086057-08hqlmvp2tmreat7rt83jbp22i17von9.apps.googleusercontent.com",
+
 		"dropbox": false,
 		"webdav": false,
 		"onedrive": false
